workin in desktop videoplayer